api_versioned_docs/version-12.1.0/avalonia/media/textformatting/shapedtextrun.mdx
---
title: 'ShapedTextRun'
hide_title: true
slug: '/avalonia/media/textformatting/shapedtextrun'
uid: 'Avalonia.Media.TextFormatting.ShapedTextRun'
commentId: 'T:Avalonia.Media.TextFormatting.ShapedTextRun'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Base'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Media.TextFormatting'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">ShapedTextRun Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Media.TextFormatting</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Base</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia</code>
</div>
</div>

<div className="apiref-page__lead">

A text run that holds shaped characters.

</div>

<div className="apiref-page__signature">

```csharp
public class ShapedTextRun
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> <a href="textrun">TextRun</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="drawabletextrun">DrawableTextRun</a> <span className="apiref-page__relation-separator">-&gt;</span> ShapedTextRun
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Implements:</span> IDisposable
</div>
</div>

## Remarks

Glyph data in the underlying [Avalonia.Media.TextFormatting.ShapedTextRun.ShapedBuffer](xref:Avalonia.Media.TextFormatting.ShapedTextRun.ShapedBuffer) is immutable after shaping:
LTR buffers are in ascending-cluster (logical) order, RTL buffers are in
descending-cluster (visual) order. [Avalonia.Media.TextFormatting.BidiReorderer](xref:Avalonia.Media.TextFormatting.BidiReorderer) only reorders runs,
it never mutates glyph order.

Ref-counted: the initial constructor call establishes one reference. Call
[Avalonia.Media.TextFormatting.ShapedTextRun.AddRef](xref:Avalonia.Media.TextFormatting.ShapedTextRun.AddRef) when taking an additional reference (e.g., when a
[Avalonia.Media.TextFormatting.TextRunCache](xref:Avalonia.Media.TextFormatting.TextRunCache) stores a shaped run a formatter is also about to use),
and [Avalonia.Media.TextFormatting.ShapedTextRun.Dispose](xref:Avalonia.Media.TextFormatting.ShapedTextRun.Dispose) to release. The underlying shaped buffer is disposed only
when the last reference is released.

## Constructors

| Name | Description |
| --- | --- |
| [ShapedTextRun](#uid-110d91d903) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-110d91d903"></span>

### ShapedTextRun Constructor

```csharp
public ShapedTextRun(Avalonia.Media.TextFormatting.ShapedBuffer shapedBuffer, Avalonia.Media.TextFormatting.TextRunProperties properties)
```

#### Parameters

`shapedBuffer` [Avalonia.Media.TextFormatting.ShapedBuffer](xref:Avalonia.Media.TextFormatting.ShapedBuffer)


`properties` [Avalonia.Media.TextFormatting.TextRunProperties](xref:Avalonia.Media.TextFormatting.TextRunProperties)


</section>

## Methods

| Name | Description |
| --- | --- |
| [Dispose](#uid-6d172079bc) | No summary available. |
| [Draw](#uid-69b2f1feed) | Draws the [Avalonia.Media.TextFormatting.DrawableTextRun](xref:Avalonia.Media.TextFormatting.DrawableTextRun) at the given origin. |
| [TryMeasureCharacters](#uid-67a85cd94a) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-6d172079bc"></span>

### Dispose Method

```csharp
public void Dispose()
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-69b2f1feed"></span>

### Draw Method

Draws the [Avalonia.Media.TextFormatting.DrawableTextRun](xref:Avalonia.Media.TextFormatting.DrawableTextRun) at the given origin.

```csharp
public void Draw(Avalonia.Media.DrawingContext drawingContext, Avalonia.Point origin)
```

#### Parameters

`drawingContext` [Avalonia.Media.DrawingContext](xref:Avalonia.Media.DrawingContext)

The drawing context.


`origin` [Avalonia.Point](xref:Avalonia.Point)

The origin.


</section>

<section className="apiref-page__member-entry">

<span id="uid-67a85cd94a"></span>

### TryMeasureCharacters Method

```csharp
public bool TryMeasureCharacters(double availableWidth, int& length)
```

#### Parameters

`availableWidth` double


`length` int&amp;


#### Returns

bool


</section>

## Properties

| Name | Description |
| --- | --- |
| [Baseline](#uid-c1eb93ccaa) | No summary available. |
| [BidiLevel](#uid-a55212ac10) | No summary available. |
| [GlyphRun](#uid-b7d69aea23) | No summary available. |
| [Length](#uid-f94822b621) | Gets the text source length. |
| [Properties](#uid-7b21cc5c6b) | A set of properties shared by every characters in the run |
| [ShapedBuffer](#uid-44e60a11fa) | No summary available. |
| [Size](#uid-e1c7604a00) | No summary available. |
| [Text](#uid-5998c75a8a) | Gets the text run's text. |
| [TextMetrics](#uid-30138f42fd) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-c1eb93ccaa"></span>

### Baseline Property

```csharp
public double Baseline { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-a55212ac10"></span>

### BidiLevel Property

```csharp
public sbyte BidiLevel { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-b7d69aea23"></span>

### GlyphRun Property

```csharp
public Avalonia.Media.GlyphRun GlyphRun { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-f94822b621"></span>

### Length Property

Gets the text source length.

```csharp
public int Length { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-7b21cc5c6b"></span>

### Properties Property

A set of properties shared by every characters in the run

```csharp
public Avalonia.Media.TextFormatting.TextRunProperties Properties { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-44e60a11fa"></span>

### ShapedBuffer Property

```csharp
public Avalonia.Media.TextFormatting.ShapedBuffer ShapedBuffer { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-e1c7604a00"></span>

### Size Property

```csharp
public Avalonia.Size Size { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-5998c75a8a"></span>

### Text Property

Gets the text run's text.

```csharp
public ReadOnlyMemory<char> Text { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-30138f42fd"></span>

### TextMetrics Property

```csharp
public Avalonia.Media.TextFormatting.TextMetrics TextMetrics { get; set; }
```

</section>

## Fields

| Name | Description |
| --- | --- |
| [DefaultTextSourceLength](textrun.mdx#uid-f86dc003de) | Inherited from [TextRun](textrun.mdx). |

</ApiRefPage>

